fix: dropdown chevron being overlapped

--- a/nerdlets/status-page-dashboard/styles.scss
+++ b/nerdlets/status-page-dashboard/styles.scss
@@ -85,6 +85,10 @@
   }
 }
 
+[class*='Dropdown-trigger'] {
+  padding-right: 23px;
+}
+
 [class*='TextField-input'] {
   &:disabled {
     border: none;
